tests/NormalTests/paczka1/fuzzy1/59058774.err
Error in line 4: rWhN A786 13,0
Error in line 14: S994 S818 42,0
Error in line 20: jZZ5cOiU S818 80,2
Error in line 12: ma5Pig S270 72,8
Error in line 11: v1j S818 83,0
Error in line 17: S994 A786 55,4
Error in line 33: UpklYP0UB S994 42,2
Error in line 36: S994 A786 160,3
Error in line 16: rWhN S994 34,9
